# p5

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.vhs  LEGACY.md  LICENSE  README.md  demo.tape  go.mod  go.sum  maskfile.md  p5.toml
cmd/p5/: commands.go  dependencies.go  helpers.go  integration_flags_test.go  integration_help_test.go  integration_helpers_test.go  integration_init_test.go  integration_preview_test.go  integration_protect_test.go  integration_stack_test.go  integration_test.go  logic.go  main.go  messages.go  model.go  model_test.go  pending_ops.go  state.go  ui_state.go  update_init.go  update_keys.go  update_messages.go  update_operations.go  update_selection.go  update_ui.go  view.go
docs/: bubble-tea-integration-testing.md  charm-tui.md  extism.md  go-plugin-migration.md  plugins.md  pulumi-automation-api.md  pulumi-integration-testing.md
docs/dependencies/: bubbletea.md  pulumi-automation-api.md  pulumi-cli.md
docs/dev/: documentation.md  release.md  testing.md
docs/features/: authentication.md  copy.md  details.md  execute.md  history.md  import.md  preview.md  protect.md  resource-targetting.md  stack-init.md  state.md
docs/plugins/: cloudflare.md  env.md  grafana.md  interface.md  k9s.md  kubernetes.md
internal/plugins/: auth.go  auth_test.go  builtin.go  builtin_test.go  context.go  context_test.go  fakes.go  grpc.go  interface.go  loader.go  manager.go  manifest.go  manifest_test.go  opener_test.go  provider.go  runtime.go  sources.go
internal/pulumi/: default_importer.go  default_operator.go  default_reader.go  default_workspace.go  fakes.go  helpers.go  history.go  import.go  integration_test.go  interfaces.go  operations.go  preview.go  resources.go  stack.go  types.go  workspace.go
internal/telemetry/: telemetry.go
internal/ui/: base.go  clipboard.go  confirmmodal.go  details.go  diff.go  errormodal.go  filter.go  focus.go  format.go  header.go  help.go  helpers.go  historydetails.go  historylist.go  importmodal.go  keys.go  modal.go  resourcecopy.go  resourceflags.go  resourcelist.go  resourcerender.go  resourcetree.go  selection.go  selector.go  stackinitmodal.go  stackselector.go  stepmodal.go  styles.go  toast.go  types.go  ui_test.go  workspaceselector.go
pkg/plugin/: plugin.go
plugins/dev-env/: dev-env.manifest.yaml  dev-env.wasm  go.mod  main.go
programs/everything/: Pulumi.dev.yaml  Pulumi.yaml  main.go
programs/simple/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  main.go
pui/: Cargo.toml
pui/src/: controller.rs  lib.rs
pulumi-automation/: Cargo.toml  README.md  maskfile.md
pulumi-automation/src/: event.rs  json_reader.rs  lib.rs  local.rs  stack.rs  workspace.rs
pulumi-automation/tests/: debug.rs  stack_integration.rs  util.rs  workspace_integration.rs
pulumi-automation/tests/fixtures/programs/: .gitignore  package-lock.json  package.json  tsconfig.json
pulumi-automation/tests/fixtures/programs/.pulumi/stacks/basic-program/: case-1.json  case-1.json.attrs  case-2.json  case-2.json.attrs  case-3.json  case-3.json.attrs  case-4.json  case-4.json.attrs  case-5.json  case-5.json.attrs  case-6.json  case-6.json.attrs  configured.json  configured.json.attrs  empty.json  empty.json.attrs  existing.json  existing.json.attrs  extra-resource.json  extra-resource.json.attrs  fresh.json  fresh.json.attrs  to-remove-forced.json  to-remove-forced.json.attrs
pulumi-automation/tests/fixtures/programs/.pulumi/stacks/debug/: base-reference.json  base-reference.json.attrs  base.json  base.json.attrs  configured.json  configured.json.attrs  fail-reference.json  fail-reference.json.attrs  fail.json  fail.json.attrs  preview.json  preview.json.attrs
pulumi-automation/tests/fixtures/programs/.pulumi/stacks/refresh/: case-1.json  case-1.json.attrs  case-2.json  case-2.json.attrs
pulumi-automation/tests/fixtures/programs/.pulumi/stacks/replacement/: fresh.json  fresh.json.attrs  test.json  test.json.attrs  up.json  up.json.attrs
pulumi-automation/tests/fixtures/programs/basic-program/: Pulumi.case-1.yaml  Pulumi.case-2.yaml  Pulumi.case-3.yaml  Pulumi.case-4.yaml  Pulumi.case-5.yaml  Pulumi.case-6.yaml  Pulumi.configured.yaml  Pulumi.empty.yaml  Pulumi.existing.yaml  Pulumi.extra-resource.yaml  Pulumi.fresh.yaml  Pulumi.to-remove-forced.yaml  Pulumi.yaml  index.ts
pulumi-automation/tests/fixtures/programs/debug/: Pulumi.base-reference.yaml  Pulumi.base.yaml  Pulumi.configured.yaml  Pulumi.fail-reference.yaml  Pulumi.fail.yaml  Pulumi.preview.yaml  Pulumi.yaml  index.ts
pulumi-automation/tests/fixtures/programs/debug/files/base/: discard.txt  secret.txt
pulumi-automation/tests/fixtures/programs/debug/files/base-reference/: secret.txt
pulumi-automation/tests/fixtures/programs/debug/files/fail/: secret.txt
pulumi-automation/tests/fixtures/programs/debug/files/fail-reference/: secret.txt
pulumi-automation/tests/fixtures/programs/debug/files/preview/: iteration.txt  secret.txt
pulumi-automation/tests/fixtures/programs/refresh/: Pulumi.case-1.yaml  Pulumi.case-2.yaml  Pulumi.yaml  index.ts
pulumi-automation/tests/fixtures/programs/refresh/files/: case-1.txt
pulumi-automation/tests/fixtures/programs/replacement/: Pulumi.fresh.yaml  Pulumi.test.yaml  Pulumi.up.yaml  Pulumi.yaml  index.ts
scripts/: coverage.sh  dev.sh  integration-test.sh  release.sh  vhs.sh  view.sh
src/: actions.rs  auto.rs  command.rs  controller.rs  input.rs  layout.rs  lib.rs  main.rs  model.rs  pulumi.rs  state.rs
src/contexts/: mod.rs  operation.rs  programs.rs  pulumiexec.rs  stacks.rs
src/snapshots/: p5__layout__tests__layout_complete_update.snap  p5__layout__tests__layout_in_progress_update.snap  p5__layout__tests__layout_operation_details_with_selection.snap  (+3 more)
src/tasks/: mod.rs  stack.rs  workspace.rs
tapes/: copy.tape  demo.tape  details.tape  history.tape  import.tape  package-lock.json  package.json  protect.tape  stack-init.tape  state.tape  targeting.tape  workflow.tape
(+229 files in other folders)
