[package]
name = "p5"
description = "A tui client for Pulumi"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pulumi-automation = { path = "./pulumi-automation" }
pui = { path = "./pui" }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
console-subscriber = "0.4.1"
tokio-util.workspace = true
tokio.workspace = true
color-eyre.workspace = true
ratatui.workspace = true

[workspace]
resolver = "3"
members = [
    "pulumi-automation",
    "pui", 
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Robert Holden <rfhold@rholden.dev>"]
homepage = "https://github.com/rfhold/p5"
repository = "https://github.com/rfhold/p5"

[workspace.dependencies]
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["sync", "tracing", "process", "rt-multi-thread", "macros", "time", "io-util", "signal"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio-util = { version = "0.7.15", features = ["io", "io-util", "time", "rt"] }
color-eyre = "0.6.3"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }

[dev-dependencies]
tokio-console = "0.1.13"

