[package]
name = "p5"
description = "A tui client for Pulumi"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pulumi-automation = { path = "./pulumi-automation" }
pui = { path = "./pui" }
tokio.workspace = true
crossterm.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio-util.workspace = true
ratatui.workspace = true
tui-input = { version = "0.12.1", features = ["crossterm"], default-features = false }
chrono.workspace = true
serde_json.workspace = true

[workspace]
resolver = "3"
members = [
    "pulumi-automation",
    "pui", 
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Robert Holden <rfhold@rholden.dev>"]
homepage = "https://github.com/rfhold/p5"
repository = "https://github.com/rfhold/p5"

[workspace.dependencies]
async-trait = "0.1.88"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["sync", "tracing", "process", "rt-multi-thread", "macros", "time", "io-util", "signal"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
tokio-util = { version = "0.7.15", features = ["io", "io-util", "time", "rt"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
chrono = "0.4.41"
color-eyre = "0.6.3"

[dev-dependencies]
tokio-console = "0.1.13"

