[package]
name = "pui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A tui framework for P5"

[dependencies]
ratatui.workspace = true
tokio.workspace = true
color-eyre.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
console-subscriber = "0.4.1"
tokio-util.workspace = true
crossterm.workspace = true
tokio-stream.workspace = true

