[package]
name = "pulumi-automation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Pulumi Automation API SDK for Rust"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
async-trait.workspace = true
tempfile = "3.20.0"
tokio-util.workspace = true
tracing.workspace = true

